# lhecsw

./: .gitignore  CMakeLists.txt  README.md
Common/: CMakeLists.txt
Common/include/: GeometryUtils.h  StringUtils.h
Common/src/: GeometryUtils.cc  StringUtils.cc
DataFormats/: CMakeLists.txt
DataFormats/SimDD4hep/: CMakeLists.txt
DataFormats/Simulation/: CMakeLists.txt
DataFormats/include/: CaloFaceBarrelSurfaces.h  CaloFaceEndcapSurfaces.h  GenericSurface.h  PolyhedraEndcapCalorimeter2Surfaces.h  SiTrackerBarrelSurfaces.h  SiTrackerEndcapSurfaces.h
DataFormats/src/: CaloFaceBarrelSurfacesInstaller.cc  CaloFaceEndcapSurfacesInstaller.cc  GenericSurfaceInstaller.cc  PolyhedraEndcapCalorimeter2SurfacesInstaller.cc  SiTrackerBarrelSurfacesInstaller.cc  SiTrackerEndcapSurfacesInstaller.cc
FWCore/: CMakeLists.txt
FWCore/Framework/: CMakeLists.txt
FWCore/Utils/: CMakeLists.txt
Generator/: CMakeLists.txt
Generator/BDSIMInterface/: CMakeLists.txt
Generator/BDSIMInterface/include/: BDSIMParticleGun.h
Generator/BDSIMInterface/plugins/: BDSIMParticleGun.cc
Generator/BDSIMInterface/src/: BDSIMParticleGun.cc
Generator/CepGenInterface/: CMakeLists.txt
Generator/CepGenInterface/include/: CepGenEventGenerator.h  ParametersListConverter.h
Generator/CepGenInterface/plugins/: CepGenEventGenerator.cc
Generator/CepGenInterface/src/: CepGenEventGenerator.cc  ParametersListConverter.cc
Generator/Common/: CMakeLists.txt
Generator/Common/include/: HepMC3EventConverter.h  IHepMCProviderTool.h
Generator/Common/src/: HepMC3EventConverter.cc
Generator/Pythia6Interface/: CMakeLists.txt
Generator/Pythia6Interface/include/: Pythia6EventGenerator.h  Pythia6Interface.h
Generator/Pythia6Interface/plugins/: Pythia6EventGenerator.cc
Generator/Pythia6Interface/src/: Pythia6EventGenerator.cc  Pythia6Interface.cc
Generator/Pythia8Interface/: CMakeLists.txt
Generator/Pythia8Interface/include/: Pythia8EventGenerator.h
Generator/Pythia8Interface/plugins/: Pythia8EventGenerator.cc
Generator/Pythia8Interface/src/: Pythia8EventGenerator.cc
Generator/SherpaInterface/: CMakeLists.txt
Generator/SherpaInterface/plugins/: SherpaEventGenerator.cc
Generator/include/: BDSIMEventGenerator.h  BDSIMObjectOutput.h  BDSIMParticleGun.h
Generator/src/: BDSIMEventGenerator.cc  BDSIMObjectOutput.cc  BDSIMParticleGun.cc
Geometry/: CMakeLists.txt
Geometry/DD4hep/: CMakeLists.txt
Geometry/DD4hep/data/compact/: compact_A3_Lhe_dip_sol_ell.xml  compact_Fhe_dip_sol_all_calo.xml  compact_Fhe_dip_sol_big_sol_ell.xml  compact_Fhe_dip_sol_circ.xml  compact_Fhe_dip_sol_ell.xml  compact_Fhe_dip_sol_ell_calo.xml  compact_Fhe_dip_sol_ell_mat-LAr-EMC_mod.xml  compact_Fhe_dip_sol_ell_mat-LAr-EMC_v7_asym.xml  compact_Fhe_dip_sol_ell_mat-LAr-EMC_v7_sym.xml  compact_Fhe_dip_sol_ell_mat-LAr-EMC_v8_asym.xml  compact_Fhe_dip_sol_ell_tracker.xml  compact_Fhe_sol_big_sol_circ.xml  compact_Fhe_sol_big_sol_ell.xml  compact_HighE_LHeC_dip_sol_ell_mat-LAr-EMC_v7_asym.xml  compact_HighE_LHeC_dip_sol_ell_mat-LAr-EMC_v7_sym.xml  compact_HighE_LHeC_dip_sol_ell_mat-LAr-EMC_v8_asym.xml  compact_HighE_LHeC_dip_sol_ell_mat-LAr-EMC_v9_asym.xml  compact_HighE_LHeC_dip_sol_ell_mat-LAr-EMC_v9_sym.xml  compact_LHe_muon_calo_magnet.xml  compact_Lhe_bp-only.xml  compact_Lhe_dip_sol_all_calo.xml  compact_Lhe_dip_sol_circ.xml  compact_Lhe_dip_sol_ell.xml  compact_Lhe_dip_sol_ell_mat-LAr-EMC.xml  compact_Lhe_dip_sol_ell_mat-LAr-EMC_mod.xml  compact_Lhe_dip_sol_ell_mat-LAr-EMC_v7_asym.xml  compact_Lhe_dip_sol_ell_mat-LAr-EMC_v7_sym.xml  compact_Lhe_dip_sol_ell_mat-LAr-EMC_v8_asym.xml  compact_Lhe_dip_sol_ell_mat-LAr-EMC_v8_sym.xml  compact_Lhe_dip_sol_ell_mod.xml  compact_Lhe_dip_sol_ell_org.xml  compact_lowE-Fhe_dip_sol_all_calo.xml  compact_lowE_Fhe_dip_sol_ell.xml  detector_types.xml
Geometry/DD4hep/include/: CaloBarrelPlane.h  CaloBarrelPlaneImpl.h  CaloEndcapPlane.h  CaloEndcapPlaneImpl.h  SimpleCylinder.h  SimpleCylinderImpl.h  Utils.h
Geometry/DD4hep/plugins/: Lhe_BP_SiTrackerEndcap2_geo.cc  Lhe_BP_SiVertexBarrel_geo.cc  Lhe_BeamPipe_Central_geo.cc  Lhe_CircElliptic_BeamPipe_geo.cc  Lhe_CylindricalEndcapCalorimeter_geo.cc  Lhe_PolyconeSupport_geo.cc  Lhe_PolyhedraBarrelCalorimeter2_geo.cc  Lhe_PolyhedraEndcapCalorimeter2_geo.cc  Lhe_SiTrackerBarrel_geo.cc  Lhe_ell_BP_MultiLayerTracker_geo.cc  Lhe_ell_BP_SiVertexBarrel_geo.cc  Lhe_ell_BeamPipe_Central_geo.cc
Geometry/DD4hep/src/: CaloBarrelPlaneImpl.cc  CaloEndcapPlaneImpl.cc  SimpleCylinder.cc  SimpleCylinderImpl.cc  Utils.cc
Geometry/include/: CaloBarrelPlane.h  CaloBarrelPlaneImpl.h  CaloEndcapPlane.h  CaloEndcapPlaneImpl.h  SimpleCylinder.h  (+2 more)
RecoAlgos/: CMakeLists.txt
RecoAlgos/ActsTracking/: CMakeLists.txt
RecoAlgos/ActsTracking/include/: IActsGeoSvc.h  TrackFittingAlgo.h
RecoAlgos/ActsTracking/plugins/: ActsGeoSvc.cc  ActsTracking.cc  TrackFitter.cc
RecoAlgos/ActsTracking/src/: TrackFittingAlgo.cc
SimAlgos/: CMakeLists.txt
SimG4/: CMakeLists.txt
cmake/: DD4hepConfig.cmake  FindCepGen.cmake  FindPythia6.cmake  FindPythia8.cmake  FindSherpa.cmake  lhecenv.in  lhecswBuildUtils.cmake  lhecswEnvironmentCheck.cmake
python/: LHeD.py
src/: Lhe_BP_DiskTracker_geo.cc  Lhe_BP_MultiLayerTracker_geo.cc  Lhe_BP_SiVertexBarrel_geo.cc  Lhe_BeamPipe_Central_geo.cc  Lhe_CaloFaceBarrel_surfaces.cc  Lhe_CaloFaceEndcap_surfaces.cc  Lhe_CylindricalBarrelCalorimeter_geo.cc  Lhe_DiskTracker_geo.cc  Lhe_EcalBarrel_geo.cc  Lhe_ForwardDetector_geo.cc  Lhe_GenericSurfaceInstaller.cc  Lhe_MultiLayerTracker_geo.cc  Lhe_PolyhedraBarrelCalorimeter2_geo.cc  Lhe_PolyhedraEndcapCalorimeter2_surfaces.cc  Lhe_SiTrackerBarrel_surfaces.cc  Lhe_SiTrackerEndcap_surfaces.cc  Lhe_Solenoid_o1_v01_gep.cc  Lhe_SubdetectorAssembly_geo.cc  Lhe_SurfaceExamplePlugin.cc  Lhe_TubeSegment_geo.cc  Lhe_ell_BP_MultiLayerTracker_geo.cc  Lhe_ell_BP_SiVertexBarrel_geo.cc  Lhe_ell_BeamPipe_Central_geo.cc
test/: LHeD.py  LHeD_BDSIM_gun.py  LHeD_CepGen_event.py  LHeD_G4Gun.py  LHeD_HepMC.py  LHeD_Pythia6_event.py  LHeD_Pythia8_event.py  LHeD_Scan.py  source_el9-gcc11.sh  source_el9-gcc13.sh
(+251 files in other folders)
